# astradb-vector-demo

./: .gitignore  README.md  chatbot_cohere.py  chatbot_openai.py  loader.py  pyproject.toml  requirements.txt  schema.cql  search_evaluation.py
demo/: db.py  model.py  test_patterns.py
thai_eval/: test_patterns.py
